[package]
name = "changelog"
version = "0.1.1"
edition = "2021"
authors = ["Peter Schilling"]
repository = "https://github.com/schpet/changelog"
homepage = "https://github.com/schpet/changelog"
description = "CLI for updating a CHANGELOG.md"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
git-conventional = "0.12.1"
parse-changelog = { version = "0.6.12", default-features = false }
semver = "1.0.25"
indexmap = { version = "2.1.0", features = ["std"] }
chrono = "0.4"
git2 = "0.18.3"
tempfile = "3.10.0"
dialoguer = "0.11.0"
colored = "2.0"
similar = "2.6.0"
comrak = "0.35.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
